fix tiny gap in nav links on hover background

--- a/main.css
+++ b/main.css
@@ -107,7 +107,7 @@ nav li a {
 }
 
 nav li a:hover {
-  padding: 7px 10px;
+  padding: 8px 10px;
   background-color: white;
   color: #96151d;
 }
